applications/fred/0-prerequisites.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fred
  labels:
    name: fred
---
# kubectl -n fred create secret generic secret --dry-run=client --from-literal='POSTGRES_PASSWORD=(redacted)' -o yaml | kubeseal --controller-name=sealed-secrets --controller-namespace=kube-system -o yaml
# apiVersion: bitnami.com/v1alpha1
# kind: SealedSecret
# metadata:
#   creationTimestamp: null
#   name: secret
#   namespace: fred
# spec:
#   encryptedData:
#     POSTGRES_PASSWORD: AgBlf7svvrpaMY9gnwhaSQmJ57ZSz3Zba/ko2JTG/JgZPKhL+l3QoOMXWXNhzTK460U/s02CRM+TDMoT2REaAHje47vpFSlSaEEwCYtPDnkd5Ndyi2ExP8/CssUgUTDwDnf7jESyQ04mjqt4dD+9SgSpUIkqqVe2LL2riByhQNzNIRMP2vlQKTQXWO6ITJMHBaAvVKalX87zm4+HL8YZffQgFGjuvOVSwJn+Vs6s4sxSZpYwTRFAwgPpg7lVi6pP++afK6+mJy+dBflN6M8YXKA2AAcXviwZQgob413RsqGxMnZC0QK5cfOuKDr9gqmna5z+dph8JD85XPRieE43lPaIAMXDOEKgdwzWlczX0Np2Nzjzyu6h88HvSo/9ff9isF9FvjAu76iSXvIIrjsATtlRzMzPWjcvfKcW1CVQeZby8mWX9u87V9fSvMi3TKKURjxh+v041z/mCUbXLo90n+M7gs6 [...]
#   template:
#     metadata:
#       creationTimestamp: null
#       name: secret
#       namespace: fred
