applications/fred/job-executor.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    namespace: fred
    name: job-executor
    labels:
        app: job-executor
        service: job-executor
spec:
    serviceName: job-executor
    replicas: 0
    selector:
        matchLabels:
            app: job-executor
            service: job-executor
    template:
        metadata:
            labels:
                app: job-executor
                service: job-executor
        spec:
            hostAliases:
                - ip: "192.168.137.10"
                  hostnames:
                      - "kube-registry"
            nodeSelector:
                kubernetes.io/arch: amd64
            topologySpreadConstraints:
                - maxSkew: 1
                  topologyKey: kubernetes.io/hostname
                  whenUnsatisfiable: DoNotSchedule
                  labelSelector:
                      matchLabels:
                          app: job-executor
            volumes:
                - name: etc-docker
                  configMap:
                      name: config
                      items:
                          - key: daemon.json
                            path: daemon.json
                - name: var-run-docker
                  hostPath:
                      path: /var/run/docker
                      type: DirectoryOrCreate
                - name: var-lib-docker
                  hostPath:
                      path: /var/lib/docker
                      type: DirectoryOrCreate
                - name: srv-repositories
                  hostPath:
                      path: /srv/repositories
                      type: DirectoryOrCreate
                - name: srv-temp
                  hostPath:
                      path: /srv/temp
                      type: DirectoryOrCreate
                - name: root-ssh
                  hostPath:
                      path: /root/.ssh
                      type: DirectoryOrCreate
            containers:
                - name: docker-in-docker
                  image: docker:27.3.1-dind
                  securityContext:
                      privileged: true
                      allowPrivilegeEscalation: true
                  volumeMounts:
                      - name: var-run-docker
                        mountPath: /var/run/docker
                      - name: var-lib-docker
                        mountPath: /var/lib/docker
                      - name: etc-docker
                        mountPath: /etc/docker
                      - name: srv-repositories
                        mountPath: /srv/repositories
                      - name: srv-temp
                        mountPath: /srv/temp
                      - name: root-ssh
                        mountPath: /root/.ssh
                  args: ["-H", "unix:///var/run/docker/docker.sock", "--mtu", "1450", "--dns", "192.168.137.3"]
                  resources:
                      requests:
                          memory: "2048Mi"
                      limits:
                          memory: "2048Mi"
                - name: job-executor
                  image: kube-registry:5000/fred-job-executor:latest
                  imagePullPolicy: Always
                  securityContext:
                      privileged: true
                      allowPrivilegeEscalation: true
                  volumeMounts:
                      - name: var-run-docker
                        mountPath: /var/run/docker
                      - name: var-lib-docker
                        mountPath: /var/lib/docker
                      - name: etc-docker
                        mountPath: /etc/docker
                      - name: srv-repositories
                        mountPath: /srv/repositories
                      - name: srv-temp
                        mountPath: /srv/temp
                      - name: root-ssh
                        mountPath: /root/.ssh
