applications/fred/trigger-producer.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    namespace: fred
    name: trigger-producer
    labels:
        app: trigger-producer
        service: trigger-producer
spec:
    serviceName: trigger-producer
    replicas: 1
    selector:
        matchLabels:
            app: trigger-producer
            service: trigger-producer
    template:
        metadata:
            labels:
                app: trigger-producer
                service: trigger-producer
        spec:
            nodeSelector:
                kubernetes.io/arch: amd64
            containers:
                - name: trigger-producer
                  image: kube-registry:5000/fred-trigger-producer:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 7070
                  resources:
                      requests:
                          memory: "128Mi"
                          cpu: "100m"
                      limits:
                          memory: "128Mi"
                          cpu: "100m"
