applications/fred/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: fred
  name: frontend
  labels:
    app: frontend
    service: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      service: frontend
  template:
    metadata:
      labels:
        app: frontend
        service: frontend
    spec:
      containers:
        - name: frontend
          image: kube-registry:5000/fred-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7070
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: fred
  labels:
    monitoring: "true"
spec:
  selector:
    app: frontend
  ports:
    - name: frontend
      port: 80
      targetPort: 80
