applications/fred/postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: fred
  name: postgres
  labels:
    app: postgres
    service: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      service: postgres
  template:
    metadata:
      labels:
        app: postgres
        service: postgres
    spec:
      volumes:
        - name: dev-shm
          emptyDir:
            medium: Memory
        - name: ssd
          persistentVolumeClaim:
            claimName: ssd
            readOnly: false
      containers:
        - name: postgres
          image: postgis/postgis:16-3.4
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: dev-shm
              mountPath: /dev/shm
            - name: ssd
              subPath: postgres/var/lib/postgresql/data
              mountPath: /var/lib/postgresql/data
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "1024Mi"
              cpu: "1000m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          startupProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 60
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 2
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: fred
  labels:
    monitoring: "true"
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
