applications/fred/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: fred
  name: fred
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - fred.initialed85.cc
      secretName: fred
  rules:
    - host: fred.initialed85.cc
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: api
                port:
                  number: 7070
